--- a/app/src/main/res/layout/fragment_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_tasks_list.xml
@@ -1,43 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".tasks.views.TasksListFragment">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="571dp"
-        android:scrollbars="vertical" />
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:backgroundTint="@color/purple"
-        app:logo="@drawable/home_svgrepo_com" />
+        android:layout_width="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="151dp"
-        app:layout_anchor="@+id/recyclerView"
-        app:layout_anchorGravity="bottom|center">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/listtoolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/purple"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:logo="@drawable/tasket_logo"
+            app:title="Tasket"
+            app:titleMargin="20dp"
+            app:titleTextColor="#21005D" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:contentDescription="@string/add_btn_desc"
-            android:src="@android:drawable/ic_menu_add"
-            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:maxImageSize="44dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_scrollFlags="scroll|enterAlways"
 
+            app:tabMode="scrollable">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/alltask_tab"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/tab3" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/todo_tab"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/tab1" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/done_tab"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/tab2" />
+        </com.google.android.material.tabs.TabLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="571dp"
+            android:scrollbars="vertical" />
+    </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@android:drawable/ic_input_add"
+        app:maxImageSize="40dp"
+        android:contentDescription="@string/add_btn_desc" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
