--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:autofillHints=""
             android:hint="@string/title"
-            android:inputType="text" />
+            android:inputType="text"
+            android:paddingBottom="20dp"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -39,10 +40,17 @@
             android:id="@+id/editTextDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autofillHints=""
             android:ems="10"
             android:hint="@string/edit_date"
             android:inputType="date"
-            android:autofillHints="" />
+            android:paddingBottom="20dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"/>
 
         <Button
             android:id="@+id/buttonSave"
