--- a/app/src/main/res/layout/fragment_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_tasks_list.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".tasks.views.TasksListFragment">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -18,21 +19,6 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:tabMode="scrollable">
 
-<!--            <com.google.android.material.tabs.TabItem-->
-<!--                android:id="@+id/all_task"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:text="@string/tab3" />-->
-<!--            <com.google.android.material.tabs.TabItem-->
-<!--                android:id="@+id/todo_tab"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:text="@string/tab1" />-->
-<!--            <com.google.android.material.tabs.TabItem-->
-<!--                android:id="@+id/done_tab"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:text="@string/tab2" />-->
         </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
