--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ListaZadan" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ListaZadan" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Inne ustawienia stylu -->
     </style>
-
-    <style name="Theme.ListaZadan" parent="Base.Theme.ListaZadan" />
+    <style name="Theme.ListaZadan" parent="Base.Theme.ListaZadan" >
+    </style>
 </resources>
